--- a/listings.html
+++ b/listings.html
@@ -37,7 +37,7 @@
 
 			<div class="page-content">
 				<div class="gig-posting">
-					<div class="blue-bkgrd pointer" onclick="$('#content-2').toggle(200);">
+					<div class="blue-bkgrd pointer" onclick="$('#content-2').toggle(300);">
 						<img src="img/guitarGig.jpg" style="width: 100%">
 						<div class="gig-text">
 							<h3 class="gig-title">Make Music</h3>
@@ -62,7 +62,7 @@
 				</div>
 
 				<div class="gig-posting">
-					<div class="yellow-bkgrd pointer" onclick="$('#content-1').toggle(200);">
+					<div class="yellow-bkgrd pointer" onclick="$('#content-1').toggle(300);">
 						<img src="img/hands-laptop.jpg" style="width: 100%">
 						<div class="gig-text">
 							<h3 class="gig-title">Design a Website</h3>
@@ -87,7 +87,7 @@
 				</div><!--/.gig-posting-->
 
 				<div class="gig-posting">
-					<div class="orange-bkgrd pointer" onclick="$('#content-4').toggle(200);">
+					<div class="orange-bkgrd pointer" onclick="$('#content-4').toggle(300);">
 						<img src="img/soundroom.jpg" style="width: 100%">
 						<div class="gig-text">
 							<h3 class="gig-title">Play Jazz Music</h3>
@@ -114,18 +114,18 @@
 
 
 				<div class="gig-posting">
-					<div class="seafoam-bkgrd pointer" onclick="$('#content-3').toggle(200);">
+					<div class="seafoam-bkgrd pointer" onclick="$('#content-3').toggle(300);">
 						<img src="img/flyers.jpg" style="width: 100%">
 						<div class="gig-text">
 							<h3 class="gig-title">Create a Flyer</h3>
-							<h5><a class="company" href="">company</a> | type</h5>
+							<h5><a class="company" href="">Sweet Pastries</a> | Pastry Shop</h5>
 							<p>Can you draw? Design? Use canva.com? Come help us create a flyer for a bake sale!</p>
 						</div>
 					</div>
 					<div id="content-3" class="seafoam-bkgrd">
 						<div class="gig-text">
 							<p>
-								<strong>Compensation:</strong> TBD
+								<strong>Compensation:</strong> $15
 								<br>
 								<strong>Time:</strong> 2 hours
 								<br>
@@ -140,10 +140,10 @@
 
 
 				<div class="gig-posting">
-					<div class="purple-bkgrd pointer" onclick="$('#content-5').toggle(200);">
+					<div class="purple-bkgrd pointer" onclick="$('#content-5').toggle(300);">
 						<img src="img/piano.png" style="width: 100%">
 						<div class="gig-text">
-							<h3 class="gig-title">Teach Piano</h3>
+							<h3 class="gig-title">Teach a Piano Song</h3>
 							<h5><a class="company" href="">Radiant Creations</a> | Flower Shop</h5>
 							<p>Have piano skills? We would love to learn an easy-leveled song to entertain customers while in the shop.</p>
 						</div>
@@ -151,9 +151,9 @@
 					<div id="content-5" class="purple-bkgrd">
 						<div class="gig-text">
 							<p>
-								<strong>Compensation:</strong> TBD
+								<strong>Compensation:</strong> $30 and a flower
 								<br>
-								<strong>Time:</strong> 1-2 hours
+								<strong>Time:</strong> 2-3 hours
 								<br>
 							</p>
 						</div>
@@ -166,7 +166,7 @@
 
 
 				<div class="gig-posting">
-					<div class="blue-bkgrd pointer" onclick="$('#content-6').toggle(200);">
+					<div class="blue-bkgrd pointer" onclick="$('#content-6').toggle(300);">
 						<img src="img/friendly-greeter.jpg" style="width: 100%">
 						<div class="gig-text">
 							<h3 class="gig-title">Welcome Guests</h3>
@@ -178,9 +178,9 @@
 						<div class="gig-text">
 							<p>We're looking for someone with great people skills to welcome guests into our quaint venue and hand out program flyers.</p>
 							<p>
-								<strong>Compensation:</strong> TBD
+								<strong>Compensation:</strong> $20
 								<br>
-								<strong>Time:</strong> 1-2 hours
+								<strong>Time:</strong> 1 hour
 								<br>
 							</p>
 						</div>
@@ -191,7 +191,8 @@
 					</div>
 				</div>
 
-			</div>
+			</div><!--/.page-content-->
+			<p class="text-center" style="color: #a0a0a0; padding-bottom: 0.5em">You've reached the end of our current gig list, but sit tight and we'll find you more. Check back soon!</p>
 		</div>
 
 
