editing transparency and background

--- a/search.html
+++ b/search.html
@@ -14,6 +14,10 @@
 		margin-bottom: 1em;
 	}
 
+	.page-content {
+		margin-bottom: 4em;
+	}
+
 	p#description, .row {
 		padding-bottom: 0.25em;
 	}
@@ -37,7 +41,7 @@
 
 <body>
 	<div id="background">
-		<div class="container text-center">
+		<div class="container text-center transparent">
 			<div class="navbar-fixed-top white-bkgrd text-center">
 				<h4 class="nav-title">Interests</h4>
 			</div>
@@ -103,25 +107,25 @@
 					</div><!--/.interest-grid-->
 				</form>
 			</section>
-		</div>
 
-		<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
-			<a href="listings.html" id="menu">
-				<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
-					<i class="glyphicon glyphicon-menu-hamburger"></i>
-				</button>
-			</a>
-			<a href="" id="search">
-				<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
-					<i class="glyphicon glyphicon-search"></i>
-				</button>
-			</a>
-			<a href="user.html" id="profile">
-				<button type="button" class="nav-button btn btn-large" aria-hidden="true">
-					<i class="glyphicon glyphicon-user"></i>
-				</button>
-			</a>
-		</nav>
+			<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
+				<a href="listings.html" id="menu">
+					<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
+						<i class="glyphicon glyphicon-menu-hamburger"></i>
+					</button>
+				</a>
+				<a href="" id="search">
+					<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
+						<i class="glyphicon glyphicon-search"></i>
+					</button>
+				</a>
+				<a href="user.html" id="profile">
+					<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+						<i class="glyphicon glyphicon-user"></i>
+					</button>
+				</a>
+			</nav>
+		</div>
 	</div>
 
 	<script src="js/svgcheckbx.js"></script>
